--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,8 @@
+@font-face {
+    font-family: Pacifico;
+    src: url('../fonts/Pacifico.ttf');
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -14,7 +19,7 @@ body {
 }
 
 h1 {
-    font-family: "Times New Roman";
+    font-family: Pacifico;
     color: black;
     margin: 16px 0;
 }
